fix typo in index

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
         <div class="jumbotron text-center" ,
             style='background-image: url(https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover; background-position-y: center'>
             <h1>Ryan's Movie Quote Application!</h1>
-            <h3 style=color:rgb(0,0,0)> Use the option on the left for random quotes or search for quotes with a
-                specific title on the right.
+            <h3 style=color:rgb(0,0,0)> Use the options below to return random quotes or search for quotes with a
+                specific title.
             </h3>
             <h3>Check out the code <a href="https://github.com/burdickr/movie_quotes" target="_blank">here!</a></h3>
         </div>
@@ -27,7 +27,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-3">
 
-                <h3>Click the button for random quotes!</h3>
+                <h3>Click below for random quotes!</h3>
                 <br>
                 <a class="btn btn-primary" href="/" role="button">Random Quotes!</a>
 
