layout adjustment to buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,28 +24,28 @@
         </div>
 
         <div class='row text-center'>
-            <div class="col-lg-3"></div>
-            <div class="col-lg-3">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-2">
 
-                <h3>Click below for random quotes!</h3>
+                <h3>Random Quotes</h3>
                 <br>
-                <a class="btn btn-primary" href="/" role="button">Random Quotes!</a>
+                <a class="btn btn-primary" href="/" role="button">Generate!</a>
 
 
             </div>
 
-            <div class="col-lg-3">
+            <div class="col-sm-2">
                 <form method="POST" action="/title">
                     <br>
                     <div class="form-group" align="center">
-                        <input name="movieSearch" class="form-control" id="selectedTitle" style=width:100%
-                            placeholder="Enter the title of a movie to search for specific quotes"><br>
+                        <input name="movieSearch" class="form-control text-center" id="selectedTitle" style=width:100%
+                            placeholder="Enter a Movie Title"><br>
 
-                        <button type="submit" value="Send" class="btn btn-primary">Search Quotes!</button>
+                        <button type="submit" value="Send" class="btn btn-primary">Search!</button>
                     </div>
                 </form>
             </div>
-            <div class="col-lg-3"></div>
+            <div class="col-sm-4"></div>
         </div>
 
         <div class='row text-center' style=padding-top:2%>
