--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <div class="jumbotron text-center" ,
             style='background-image: url(https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover; background-position-y: center'>
             <h1>Ryan's Movie Quote Application!</h1>
-            <h3 style=color:rgb(0,0,0)> Use the options below to return random quotes or search for quotes with a
+            <h3 style=color:rgb(0,0,0)> Use the options below to generate random quotes or search for quotes with a
                 specific title.
             </h3>
             <h3>Check out the code <a href="https://github.com/burdickr/movie_quotes" target="_blank">here!</a></h3>
